--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
 <title>TXL222 Animations</title>
 </head>
 <body>
-<h1>ANIMATIONS</h1>
+<h1>COMBER ANIMATIONS</h1>
 <p>Animation 1</p>
 <object width="800" height="600">
-	<param name="movie" value="/animations/Comber Animation-1.swf">
+	<param name="movie1" value="/animations/Comber Animation-1.swf">
 	<embed src="/animations/Comber Animation-1.swf" width="800" height="600">
 	</embed>
 </object>
 <p>Animation 2</p>
 <object width="800" height="600">
-	<param name="movie" value="/animations/Comber Animation-2.swf">
+	<param name="movie2" value="/animations/Comber Animation-2.swf">
 	<embed src="/animations/Comber Animation-2.swf" width="800" height="600">
 	</embed>
 </object>
