--- a/index.html
+++ b/index.html
@@ -5,17 +5,9 @@
 </head>
 <body>
 <h1>COMBER ANIMATIONS</h1>
-<p>Animation 1</p>
-<object width="800" height="600">
-	<param name="movie1" value="/animations/Comber Animation-1.swf">
-	<embed src="/animations/Comber Animation-1.swf" width="800" height="600">
-	</embed>
-</object>
-<p>Animation 2</p>
-<object width="800" height="600">
-	<param name="movie2" value="/animations/Comber Animation-2.swf">
-	<embed src="/animations/Comber Animation-2.swf" width="800" height="600">
-	</embed>
-</object>
+<a href="animation_1.html">Animation 1</a>
+<p>     </p>
+<a href="animation_2.html">Animation 2</a>
+<p>     </p>
 </body>
 </html>
