--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 </head>
 <body>
 <h1>COMBER ANIMATIONS</h1>
-<a href="animation_1.html">Animation 1</a>
+<a href="src/animation_1.html">1).  Animation 1</a>
 <p>     </p>
-<a href="animation_2.html">Animation 2</a>
+<a href="src/animation_2.html">2).  Animation 2</a>
 <p>     </p>
 </body>
 </html>
