--- a/src/animation_2.html
+++ b/src/animation_2.html
@@ -4,11 +4,10 @@
 <title>Animation 2</title>
 </head>
 <body>
-
 <h1>Animation 2</h1>
 <object width="800" height="600">
 	<param name="movie" value="../animations/Comber Animation-2.swf">
-	<embed src="/animations/Comber Animation-2.swf" width="800" height="600">
+	<embed src="../animations/Comber Animation-2.swf" width="800" height="600">
 	</embed>
 </object>
 </body>
