--- a/src/animation_1.html
+++ b/src/animation_1.html
@@ -7,8 +7,8 @@
 <h1>Animation 1</h1>
 <object width="800" height="600">
 	<param name="movie" value="../animations/Comber Animation-1.swf">
-	<embed src="../animations/Comber Animation-1.swf" width="800" height="600">
-	</embed>
+<!-- 	<embed src="../animations/Comber Animation-1.swf" width="800" height="600"> -->
+<!-- 	</embed> -->
 </object>
 </body>
 </html>
